samples/_failures_safe/1761658471_6e437f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a62f378a.c: In function ‘main’:
./samples/SAFE/__tmp_a62f378a.c:140:13: error: expected ‘;’ at end of input
  140 |     return 0
      |             ^
      |             ;
./samples/SAFE/__tmp_a62f378a.c:140:5: error: expected declaration or statement at end of input
  140 |     return 0
      |     ^~~~~~
